# ta-data-analysis-challenge

./: README.md  exploration.ipynb  pyproject.toml  report.ipynb  requirements.txt
data/2 intermediate/: preprocessed.csv
data/2_intermediate/: etl_output.csv
data/3_report/: df_age_to_default.csv  df_education_to_default.csv  df_marriage_to_default.csv  df_sex_to_default.csv
