[tool.poetry]
name = "ta-data-analysis-challenge"
version = "0.1.0"
description = ""
authors = ["adolfrodeno <amvillalobos@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"
ggplot = "^0.11.5"
ipykernel = "^6.21.1"
tslib = "^1.8"
plotnine = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
